Fix spacing error summary (#52)
* Fix spacing error-summary
- adjust padding surrounding

* Fix spacing error-summary
- change spacing on h2 in form to only cover direct children. So error summary does not get lage space above header

Relates to MT-168

--- a/src/scss/components/_multipage-form.scss
+++ b/src/scss/components/_multipage-form.scss
@@ -7,7 +7,7 @@
       margin-top: var(--content-spacer);
     }
 
-    h2 {
+    > h2 {
       margin-top: var(--spacer-large);
     }
     .back-arrow {
